fix: Horizontal scroll no longers depends on parent component

--- a/src/styles/StoresPage.module.css
+++ b/src/styles/StoresPage.module.css
@@ -19,14 +19,3 @@
   box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
     rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
-
-.container {
-  display: flex;
-  flex-wrap: nowrap;
-  overflow-x: scroll;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-.container::-webkit-scrollbar {
-  display: none;
-}
